# Learn_LangGraph

./: .gitignore  README.md  langgraph.json  pyproject.toml
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-Strutured_output copy.ipynb  08- prompting copy.ipynb  08- prompting.ipynb  09-tools.ipynb  10-conditions copy.ipynb  11-parallization.ipynb
src/agents/: code_review.py  main.py  rag.py  simple_2.py  simple_3.py
src/agents/api/: main.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/booking/: node.py  prompt.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py  tools.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/nodes/routes/intent/: prompt.py  route.py
