[project]
name = "curso-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.41",
    "jinja2>=3.1.6",
    "langchain>=1.2.8",
    "langchain-aws>=1.2.2",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "langgraph-cli[inmem]>=0.4.12",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
